# pixi-cuda-environment

./: Dockerfile  pyproject.toml
.github/workflows/: build-docker.yaml
