[project]
name = "pixi-cuda-environment"
version = "0.1.0"
description = "pixi cuda env"
requires-python = ">= 3.11"
dependencies = ["pandas", "numpy", "jupyterhub>=4", "notebook"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
pixi-cuda-environment = { path = ".", editable = true }
jax = { version = "*" }


# Feature Definitions
[tool.pixi.feature.cuda]
system-requirements = {cuda = "12"}

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = { version = "*", extras = ["cuda12"] }

# Environments
[tool.pixi.environments]
cuda = ["cuda"]
